--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Ridwan Dahir Resume</title>
-
- 
+  <link rel="stylesheet" href="style.css" /> 
 </head>
 <body>
     <div>
