--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
--<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -9,7 +9,7 @@
 <body>
     <div>
       <h1>Ridwan Dahir</h1>
-      <h4>3202985225 |rdahirri@gmail.com </h4>
+      <h4>3202985225 | rdahirri@gmail.com </h4>
       <h5> Chaska, MN 55318 </h5>
       
   </div>
